[gd_scene load_steps=29 format=3 uid="uid://dcunatisg8ibr"]

[ext_resource type="Script" path="res://scenes/task_editor.gd" id="1_b0ww1"]
[ext_resource type="ButtonGroup" uid="uid://c4hrg6nv6u6tb" path="res://gui/task_tracking/checkbox_toggle.tres" id="2_38p0l"]
[ext_resource type="Script" path="res://scenes/task_editor/menu_button.gd" id="2_57sr6"]
[ext_resource type="PackedScene" uid="uid://ds4yxf6rofxhb" path="res://gui/task_tracking/current_checkbox_button.tscn" id="3_laovo"]
[ext_resource type="Theme" uid="uid://dec2b8xmm6paj" path="res://theme/main_theme.tres" id="4_hl67a"]
[ext_resource type="Script" path="res://scenes/task_editor/checkbox_apply_toggle.gd" id="4_w2xr7"]
[ext_resource type="Script" path="res://scenes/task_editor/checkbox_inspect_toggle.gd" id="5_661uy"]
[ext_resource type="ButtonGroup" uid="uid://tci5j17kmt8l" path="res://gui/task_tracking/section_button_group.tres" id="5_vyaou"]
[ext_resource type="Script" path="res://scenes/task_editor/editing_lock_button.gd" id="6_dqly2"]
[ext_resource type="Script" path="res://scenes/task_editor/header_scroll_container.gd" id="6_pium1"]
[ext_resource type="Script" path="res://scenes/task_editor/year_selection_button.gd" id="7_1s5eu"]
[ext_resource type="Script" path="res://scenes/month_selection_menu.gd" id="7_fofm3"]
[ext_resource type="Script" path="res://scenes/task_editor/header_grid_container.gd" id="7_hn1ku"]
[ext_resource type="Script" path="res://gui/task_tracking/task_spreadsheet/task_grid_container.gd" id="8_txnjo"]
[ext_resource type="PackedScene" uid="uid://c7tqndbd8llst" path="res://gui/task_tracking/checkbox_selection_popup.tscn" id="9_mlsj3"]
[ext_resource type="PackedScene" uid="uid://b2gi1xlrdmw1p" path="res://gui/task_tracking/database_manager/database_manager.tscn" id="10_7t8qi"]
[ext_resource type="Script" path="res://scenes/task_editor/monthly_button.gd" id="10_etwfq"]
[ext_resource type="Script" path="res://scenes/task_editor/weekly_button.gd" id="11_ecy4k"]
[ext_resource type="Script" path="res://scenes/task_editor/daily_button.gd" id="12_ycygh"]
[ext_resource type="Script" path="res://scenes/task_editor/current_save_label.gd" id="13_lq2a4"]
[ext_resource type="Script" path="res://scenes/task_editor/data_columns_toggle_option_button.gd" id="14_2vuht"]
[ext_resource type="Script" path="res://scenes/task_editor/task_add_panel.gd" id="14_58d3i"]
[ext_resource type="Script" path="res://scenes/task_editor/save_warning_button.gd" id="14_lyovr"]
[ext_resource type="Script" path="res://scenes/task_editor/multi_text_popup_center.gd" id="18_5n1d3"]
[ext_resource type="Script" path="res://scenes/task_editor/database_manager_center.gd" id="18_t6koh"]
[ext_resource type="Script" path="res://scenes/task_editor/add_task_button.gd" id="19_m5e8t"]
[ext_resource type="Script" path="res://scenes/task_editor/task_grid_scroll_container.gd" id="21_6byvo"]
[ext_resource type="PackedScene" uid="uid://behwh6tk0c5jy" path="res://gui/task_tracking/year_selection_panel.tscn" id="24_mvrf5"]

[node name="TaskEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b0ww1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainHBox" type="HBoxContainer" parent="MainMargin"]
layout_mode = 2

[node name="SideMenuScrollContainer" type="ScrollContainer" parent="MainMargin/MainHBox"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SideMenuVBox" type="VBoxContainer" parent="MainMargin/MainHBox/SideMenuScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"VBoxContainer_No_Space"

[node name="MenuButton" type="MenuButton" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox" node_paths=PackedStringArray("task_editor", "data_manager_center")]
unique_name_in_owner = true
z_index = 4
z_as_relative = false
layout_mode = 2
text = "Task Sheet
Menu"
flat = false
item_count = 9
popup/item_0/text = "Save Files"
popup/item_1/text = "Change Logs"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Task Settings"
popup/item_2/id = 2
popup/item_3/id = 3
popup/item_3/separator = true
popup/item_4/text = "Task Data Manager"
popup/item_4/id = 4
popup/item_5/id = 5
popup/item_5/separator = true
popup/item_6/text = "Task Tracking Menu"
popup/item_6/id = 6
popup/item_7/text = "Main Menu"
popup/item_7/id = 7
popup/item_8/text = "Quit"
popup/item_8/id = 8
script = ExtResource("2_57sr6")
task_editor = NodePath("../../../../..")
data_manager_center = NodePath("../../../../../DatabaseManagerCenter")

[node name="HSeparator4" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="CheckboxModeLabel" type="Label" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2
text = "Checkbox Mode"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CheckboxApplyToggle" type="Button" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_38p0l")
text = "Apply"
script = ExtResource("4_w2xr7")

[node name="CheckboxInspectToggle" type="Button" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_38p0l")
text = "Inspect"
script = ExtResource("5_661uy")

[node name="HSeparator5" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="EditingLockButton" type="CheckButton" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Editing
Lock"
script = ExtResource("6_dqly2")

[node name="HSeparator7" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="CurrentCheckboxButton" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox" instance=ExtResource("3_laovo")]
unique_name_in_owner = true
z_index = 3
z_as_relative = false
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="YearSelectionLabel" type="Label" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2
text = "Year"
horizontal_alignment = 1

[node name="YearSelectionButton" type="Button" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2
text = "Year Button"
script = ExtResource("7_1s5eu")

[node name="HSeparator6" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="SectionSelectionLabel" type="Label" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2
text = "Section"
horizontal_alignment = 1

[node name="MonthlyButton" type="Button" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_hl67a")
toggle_mode = true
button_group = ExtResource("5_vyaou")
text = "Monthly"
script = ExtResource("10_etwfq")

[node name="WeeklyButton" type="Button" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_hl67a")
toggle_mode = true
button_group = ExtResource("5_vyaou")
text = "Weekly"
script = ExtResource("11_ecy4k")

[node name="DailyButton" type="Button" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_hl67a")
toggle_mode = true
button_group = ExtResource("5_vyaou")
text = "Daily"
script = ExtResource("12_ycygh")

[node name="HSeparator3" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="MonthSelectionLabel" type="Label" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2
text = "Month"
horizontal_alignment = 1

[node name="MonthSelectionMenu" type="MenuButton" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox" node_paths=PackedStringArray("section_label", "section_divider")]
unique_name_in_owner = true
layout_mode = 2
text = "Needs Update"
flat = false
item_count = 12
popup/item_0/text = "January"
popup/item_0/id = 1
popup/item_1/text = "February"
popup/item_1/id = 2
popup/item_2/text = "March"
popup/item_2/id = 3
popup/item_3/text = "April"
popup/item_3/id = 4
popup/item_4/text = "May"
popup/item_4/id = 5
popup/item_5/text = "June"
popup/item_5/id = 6
popup/item_6/text = "July"
popup/item_6/id = 7
popup/item_7/text = "August"
popup/item_7/id = 8
popup/item_8/text = "September"
popup/item_8/id = 9
popup/item_9/text = "October"
popup/item_9/id = 10
popup/item_10/text = "November"
popup/item_10/id = 11
popup/item_11/text = "December"
popup/item_11/id = 12
script = ExtResource("7_fofm3")
section_label = NodePath("../MonthSelectionLabel")
section_divider = NodePath("../HSeparator3")

[node name="HSeparator8" type="HSeparator" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2

[node name="MonthSelectionLabel2" type="Label" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
visible = false
layout_mode = 2
text = "Data Columns"
horizontal_alignment = 1

[node name="DataColumnsToggleOptionButton" type="OptionButton" parent="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox"]
layout_mode = 2
alignment = 1
fit_to_longest_item = false
script = ExtResource("14_2vuht")

[node name="NonSideVBox" type="VBoxContainer" parent="MainMargin/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopMenuHBox" type="HBoxContainer" parent="MainMargin/MainHBox/NonSideVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="CurrentSaveLabel" type="Label" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Current File: YEAR"
script = ExtResource("13_lq2a4")

[node name="SaveWarningButton" type="Button" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "No Data Loaded!"
script = ExtResource("14_lyovr")

[node name="HBoxFarSide" type="HBoxContainer" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="StandardNavigation" type="Button" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
layout_mode = 2
size_flags_horizontal = 8
disabled = true
toggle_mode = true
button_pressed = true
text = "Standard Navigation"

[node name="SavedNavigation" type="Button" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
layout_mode = 2
size_flags_horizontal = 8
disabled = true
toggle_mode = true
text = "Saved Navigation"

[node name="VSeparator2" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
layout_mode = 2
size_flags_horizontal = 8

[node name="StandardFilters" type="Button" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
layout_mode = 2
size_flags_horizontal = 8
disabled = true
toggle_mode = true
text = "Standard Filters"

[node name="SavedFilters" type="Button" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
layout_mode = 2
size_flags_horizontal = 8
disabled = true
toggle_mode = true
text = "Saved Filters"

[node name="VSeparator" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CurrentDateLabel" type="Label" parent="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/HBoxFarSide"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Date Goes Here"

[node name="BottomMenuHBox" type="HBoxContainer" parent="MainMargin/MainHBox/NonSideVBox"]
layout_mode = 2

[node name="TaskAddPanel" type="PanelContainer" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("14_58d3i")

[node name="TaskAddMargin" type="MarginContainer" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin"]
layout_mode = 2
theme_type_variation = &"HBoxContainer_No_Space"

[node name="AddTaskButton" type="Button" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Task"
script = ExtResource("19_m5e8t")

[node name="VSeparator6" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskTitleLineEdit" type="LineEdit" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Task Title"
expand_to_text_length = true
clear_button_enabled = true

[node name="VSeparator5" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskGroupLineEdit" type="LineEdit" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Task Group"
expand_to_text_length = true
clear_button_enabled = true

[node name="ExistingGroupsOption" type="OptionButton" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "Existing Groups"

[node name="VSeparator4" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskAddAssignedUserLabel" type="Label" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Assigned to:"

[node name="TaskAddAssignedUserOptionButton" type="OptionButton" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "No Assigned User"

[node name="VSeparator3" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskAddScheduleStartLabel" type="Label" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Schedule Start:"

[node name="TaskAddScheduleStartSpinBox" type="SpinBox" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 30.0
rounded = true
alignment = 1

[node name="VSeparator2" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskAddUnitsPerCycleLabel" type="Label" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Units per Cycle:"

[node name="TaskAddUnitsPerCycleSpinBox" type="SpinBox" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 30.0
rounded = true
alignment = 1

[node name="VSeparator" type="VSeparator" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="AcceptNewTaskButton" type="Button" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="HBoxLowerFarside" type="HBoxContainer" parent="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="HeaderScrollContainer" type="ScrollContainer" parent="MainMargin/MainHBox/NonSideVBox"]
unique_name_in_owner = true
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("6_pium1")

[node name="HeaderGridContainer" type="GridContainer" parent="MainMargin/MainHBox/NonSideVBox/HeaderScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("7_hn1ku")

[node name="TaskGridScrollContainer" type="ScrollContainer" parent="MainMargin/MainHBox/NonSideVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
script = ExtResource("21_6byvo")

[node name="TaskGridContainer" type="GridContainer" parent="MainMargin/MainHBox/NonSideVBox/TaskGridScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource("8_txnjo")

[node name="CheckboxSelectionPopup" parent="." node_paths=PackedStringArray("paired_checkbox_menu_button") instance=ExtResource("9_mlsj3")]
unique_name_in_owner = true
visible = false
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 191.0
offset_top = 317.0
offset_right = 1014.0
offset_bottom = 539.0
size_flags_horizontal = 0
size_flags_vertical = 4
paired_checkbox_menu_button = NodePath("../MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/CurrentCheckboxButton")

[node name="MultiTextPopupCenter" type="CenterContainer" parent="." node_paths=PackedStringArray("text_edit")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("18_5n1d3")
text_edit = NodePath("MultiTextPopupPanelContainer/VBoxContainer/TextEdit")

[node name="MultiTextPopupPanelContainer" type="PanelContainer" parent="MultiTextPopupCenter"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TaskTitle" type="Label" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer/HBox"]
layout_mode = 2
text = "Task:"

[node name="TaskLabel" type="Label" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "NOT LOADED"

[node name="TextEdit" type="TextEdit" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
text = "ALSO NOT LOADED"

[node name="HBox2" type="HBoxContainer" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AcceptMultiTextButton" type="Button" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer/HBox2"]
layout_mode = 2
text = "Accept & Save"

[node name="CancelMultiTextButton" type="Button" parent="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer/HBox2"]
layout_mode = 2
text = "Cancel"

[node name="DatabaseManagerCenter" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("18_t6koh")

[node name="DatabaseManager" parent="DatabaseManagerCenter" node_paths=PackedStringArray("visibility_node") instance=ExtResource("10_7t8qi")]
unique_name_in_owner = true
z_index = 5
z_as_relative = false
layout_mode = 2
visibility_node = NodePath("..")

[node name="YearSelectionPanel" parent="." node_paths=PackedStringArray("opening_button", "node_for_position_sync") instance=ExtResource("24_mvrf5")]
visible = false
layout_mode = 0
offset_left = 183.0
offset_top = 523.0
offset_right = 428.0
offset_bottom = 656.0
opening_button = NodePath("../MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/YearSelectionButton")
node_for_position_sync = NodePath("../MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/YearSelectionLabel")

[connection signal="pressed" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/MenuButton" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/MenuButton" method="_on_pressed"]
[connection signal="toggled" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/CheckboxApplyToggle" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/CheckboxApplyToggle" method="_on_toggled"]
[connection signal="toggled" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/CheckboxInspectToggle" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/CheckboxInspectToggle" method="_on_toggled"]
[connection signal="toggled" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/EditingLockButton" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/EditingLockButton" method="_on_toggled"]
[connection signal="toggled" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/MonthlyButton" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/MonthlyButton" method="_on_toggled"]
[connection signal="toggled" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/WeeklyButton" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/WeeklyButton" method="_on_toggled"]
[connection signal="toggled" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/DailyButton" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/DailyButton" method="_on_toggled"]
[connection signal="item_selected" from="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/DataColumnsToggleOptionButton" to="MainMargin/MainHBox/SideMenuScrollContainer/SideMenuVBox/DataColumnsToggleOptionButton" method="_on_item_selected"]
[connection signal="pressed" from="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/SaveWarningButton" to="MainMargin/MainHBox/NonSideVBox/TopMenuHBox/SaveWarningButton" method="_on_pressed"]
[connection signal="pressed" from="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox/AddTaskButton" to="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel" method="_on_add_task_button_pressed"]
[connection signal="item_selected" from="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox/ExistingGroupsOption" to="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel" method="_on_existing_groups_option_item_selected"]
[connection signal="pressed" from="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel/TaskAddMargin/HBox/AcceptNewTaskButton" to="MainMargin/MainHBox/NonSideVBox/BottomMenuHBox/TaskAddPanel" method="_on_accept_new_task_button_pressed"]
[connection signal="pressed" from="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer/HBox2/AcceptMultiTextButton" to="MainMargin/MainHBox/NonSideVBox/TaskGridScrollContainer/TaskGridContainer" method="_on_accept_multi_text_button_pressed"]
[connection signal="pressed" from="MultiTextPopupCenter/MultiTextPopupPanelContainer/VBoxContainer/HBox2/CancelMultiTextButton" to="MultiTextPopupCenter" method="_on_cancel_multi_text_button_pressed"]
